--- a/packages/3.x/Payload.html
+++ b/packages/3.x/Payload.html
@@ -11,7 +11,7 @@ title: Aura.Payload
             <th colspan="3" class="curr">1.2. Aura.Payload</th>
         </tr>
         <tr>
-            <td class="prev"><a href="/packages/3.x/Di/auto.html">Auto-Resolution Of Constructor Parameters</a></td>
+            <td class="prev"><a href="/packages/3.x/Di/migrating.html">Migrating from 2.x to 3.x</a></td>
             <td class="parent">1. Version 3.x</th>
             <td class="next"><a href="/packages/3.x/Router/">Aura.Router</a></td>
         </tr>
@@ -339,12 +339,12 @@ class ApplicationService
 <nav class="navfooter">
     <table>
         <tr>
-            <td class="prev"><a href="/packages/3.x/Di/auto.html">Prev</a></td>
+            <td class="prev"><a href="/packages/3.x/Di/migrating.html">Prev</a></td>
             <td class="parent"><a href="/packages/3.x/">Up</a></td>
             <td class="next"><a href="/packages/3.x/Router/">Next</a></td>
         </tr>
         <tr>
-            <td class="prev">1.1.9. Auto-Resolution Of Constructor Parameters</td>
+            <td class="prev">1.1.10. Migrating from 2.x to 3.x</td>
             <td class="parent">1. Version 3.x</td>
             <td class="next">1.3. Aura.Router</td>
         </tr>
