--- a/packages/3.x/Payload.html
+++ b/packages/3.x/Payload.html
@@ -2,6 +2,7 @@
 layout: site
 active: packages
 title: Aura.Payload
+permalink: /packages/3.x/Payload.html
 ---
 <script>hljs.initHighlightingOnLoad();</script>
 
