--- a/packages/3.x/Payload.html
+++ b/packages/3.x/Payload.html
@@ -18,7 +18,7 @@ permalink: /packages/3.x/Payload.html
         </tr>
     </table>
 </nav>
-<div id="section-main"><h1 id="1-3">1.3. Aura.Payload</h1>
+<h1 id="1-3">1.3. Aura.Payload</h1>
 <p>You use a <em>Payload</em> as a data transfer object to send domain-layer results to
 your user-interface layer, along with meta-data indicating the meaning of the
 domain results.</p>
@@ -336,7 +336,7 @@ class ApplicationService
 }
 ?&gt;
 </code></pre>
-</div>
+
 <nav class="navfooter">
     <table>
         <tr>
